--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 body {
@@ -41,6 +42,9 @@ body {
         width: 450px;
         height: 450px;
         border-radius: 50%;
+        border-style: solid;
+        border: 4px 2px #0000;
+        box-shadow: 4px 4.5px;
         background: white;
 
         /* Centers the contents within the circle. */
