--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -16,7 +16,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgb(149, 194, 215);
+
+    background: linear-gradient(-45deg, #000000, #FFFC99, #EB6123, #FFFFFF);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
   }
 
   button {
@@ -82,3 +86,16 @@
     bottom:0; 
     width:100%;
   }
+  
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
