--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -17,6 +17,7 @@
     justify-content: center;
     align-items: center;
 
+    /* Gradient background for transitioning colors */
     background: linear-gradient(-45deg, #000000, #FFFC99, #EB6123, #FFFFFF);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
@@ -45,6 +46,11 @@
       font-family: perma;
   }
 
+  .button-alignment {
+    display: flex;
+    justify-content: center;
+  }
+
   .circle-container {
         /* Creats the circle container. */
         width: 450px;
@@ -66,6 +72,26 @@
         top: 50%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
+  }
+
+  .square-container {
+    /* Creates the square */
+    width: 700px;
+    height: 792px;
+    border-style: solid;
+    background: black;
+
+    /* Centers the contents within the square. */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* Displays the square in the exact middle of the screen. */
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
   }
 
   .center {
