11/8 Start of Day Commit - Major Fixes
-Images are now added to Document Collection into an array field value associated with the current User UID
-Adjusted some of the UI Elements - specifically the Select/Upload/Retrieve button placement
-Changed Upload status to drop decimal places and adjusted position to bottom
-Fixed major issue with new users not able to be added into our Firebase  "users" collection when they are registered. This was caused by missing imports.

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -12,12 +12,14 @@
     font-style: normal;
   }
 
+/* Commented out because it was throwing an error - we don't have this font in the /fonts folder ATM
 @font-face {
     font-family: 'century-gothic'; 
     src: url('fonts/CenturyGothic.ttf') format('truetype');
     font-weight: 400; 
     font-style: normal; 
-}
+} 
+*/
 
 body {
     display: flex;
@@ -64,5 +66,9 @@ body {
 
 .btn-warning { 
     display: center; 
+}
+
+.button {
+  text-align:center;
 }
 
