--- a/stylesheets/login.css
+++ b/stylesheets/login.css
@@ -12,6 +12,14 @@
   font-style: normal;
 }
 
+
+@font-face {
+  font-family: 'quicksand';
+  src: url('fonts/Quicksand-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal; 
+}
+
 body {
   display: flex;
   justify-content: center;
